audio: don't use an uninitialized variable.

PR kern/51717: audioattach erroneously fails due to uninitialized variable
from flxd.

while here, switch to use aprint_error_dev.